@@ -15,6 +15,22 @@
     <spotbugs.onlyAnalyze>org.eclipse.jetty.security.*</spotbugs.onlyAnalyze>
   </properties>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            @{argLine} 
+	    ${jetty.surefire.argLine} 
+	    --add-reads org.eclipse.jetty.security=org.eclipse.jetty.logging 
+          </argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
@@ -45,4 +61,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
 </project>
